<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rpros2_week1</name>
  <version>1.0.0</version>
  <description>Robot Programming with ROS2 Course | Week 1 | ROS Publishers/Subscribers, Packages, and Launch Files</description>
  <maintainer email="erf.riazati@gmail.com">erfan</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
